--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,6 @@
         <title>Vanilla Redux</title>
     </head>
     <body>
-        <script src="../src/index.js"></script>
-        <button id="add">Add</button>
-        <span>0</span>
-        <button id="minus">Minus</button>
+        <div id="root"></div>
     </body>
 </html>
